--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vue/test-utils": "^1.0.0-beta.22",
     "babel-core": "^6.26.3",
     "babel-jest": "^23.4.2",
+    "babel-preset-env": "^1.7.0",
     "jest-cli": "^23.4.2",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
@@ -40,6 +41,5 @@
       ".*\\.(vue)$": "vue-jest",
       "^.+\\.js$": "<rootDir>/node_modules/babel-jest"
     }
-    
   }
 }
