--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "0.18.0",
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^7.1.5",
     "cosmicjs": "3.2.12",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
